feat:  create Strategy in index.html

--- a/styles/global.css
+++ b/styles/global.css
@@ -14,5 +14,6 @@
     --light-text-color: #FFFFFF;
     --primary-color: #23A6F0;
     --secondary-color-1: #40BB15;
-    --secondary-color-2: #3C403D
+    --secondary-color-2: #3C403D;
+    --second-text-color:  #737373;
 }
