feat:  create download index.html

--- a/styles/global.css
+++ b/styles/global.css
@@ -16,4 +16,5 @@
     --secondary-color-1: #40BB15;
     --secondary-color-2: #3C403D;
     --second-text-color:  #737373;
+    --muted-color: #BDBDBD;
 }
