--- a/styles/style.css
+++ b/styles/style.css
@@ -286,3 +286,113 @@ main img{
 .cards-img{
 width: 31px;
 }
+/* pricing */
+.pricing{
+    font-family: montserrat;
+}
+.pricing-info{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    margin-top: 50px;
+    gap: 10px;
+}
+
+.pricing-info h2{
+    width: 151px;
+    font-size: 40px;
+    color: var(--light-text-color);
+}
+
+.pricing-info p{
+    width: 470px;
+    font-size: 14px;
+    color: var(--light-text-color);
+}
+
+.pricing-cards{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 40px;
+    gap: 30px;
+}
+.card {
+    background-color: var(--light-text-color);
+    width: 400px;
+    border: 1px solid #e0e0e0;
+    border-radius: 8px;
+    box-shadow: 0 0 4px rgba(0, 0, 0, 0.05);
+    display: flex;
+    justify-content: space-between;
+    padding: 24px;
+    box-sizing: border-box;
+    font-family: montserrat;
+  }
+  
+  .card-left {
+    width: 60%;
+  }
+  
+  .card-left h2 {
+    color: #1DA1F2;
+    font-size: 20px;
+    margin: 0 0 12px;
+  }
+  
+  .card-left p {
+    color: #555;
+    font-size: 14px;
+    line-height: 1.5;
+    margin: 0;
+  }
+  
+  .card-right {
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+  }
+  
+  .price-container {
+    display: flex;
+    align-items: center;
+    margin-bottom: 16px;
+  }
+  
+  .price {
+    font-size: 36px;
+    font-weight: bold;
+    color: #1DA1F2;
+    margin-right: 8px;
+  }
+  
+  .price-info {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+  }
+  
+  .currency-symbol {
+    font-size: 14px;
+    color: #1DA1F2;
+  }
+  
+  .per-month {
+    font-size: 12px;
+    color: #1DA1F2;
+  }
+  
+  .button {
+    background-color: var(--primary-color);
+    color: var(--light-text-color);
+    border: none;
+    border-radius: 4px;
+    padding: 10px 18px;
+    cursor: pointer;
+    font-size: 14px;
+  }
+
