--- a/styles/style.css
+++ b/styles/style.css
@@ -423,7 +423,87 @@ width: 31px;
     font-size: 14px;
     color: var(--light-text-color);
 }
-
-
   /* fim branches */
+
+  /* appointament */
+
+  .appointament {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  
+  .appointament-container {
+    display: flex;
+    width: 885px;
+    height: 610px;
+    background-color: var(--light-text-color);
+    margin-top: 50px;
+  }
+  
+  form {
+    display: flex;
+    flex-direction: row;
+    width: 100%;
+  }
+  
+  
+ 
+  .appointment-img img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    border-radius: 0;
+  }
+  
+  
+  .appointament-form {
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    padding: 50px;
+    gap: 10px;
+  }
+  
+  form h2 {
+    text-align: center;
+    margin-bottom: 20px;
+  }
+  
+  form label {
+    font-weight: bold;
+    margin-top: 10px;
+  }
+  
+  form input{
+    width: 500px;
+    height: 50px;
+    padding-left: 21px;
+    border: 1px solid var(--second-text-color);
+    border-radius: 5px;
+    background-color: #f9f9f9;
+  }
+  
+  form select {
+    height: 50px;
+    padding-left: 21px;
+    border: 1px solid var(--second-text-color);
+    border-radius: 5px;
+    background-color: #f9f9f9;
+  }
+  
+  form button {
+    width: 100%;
+    height: 51px;
+    background-color: var(--primary-color);
+    color: var(--light-text-color);
+    margin-top: 30px;
+    font-weight: bold;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+  }
+  
+  /* fim appointament */
 
