feat:  footer  index.html

--- a/styles/global.css
+++ b/styles/global.css
@@ -17,4 +17,5 @@
     --secondary-color-2: #3C403D;
     --second-text-color:  #737373;
     --muted-color: #BDBDBD;
+    --light-gray-1: #FFFFFF;
 }
