--- a/styles/style.css
+++ b/styles/style.css
@@ -507,3 +507,68 @@ width: 31px;
   
   /* fim appointament */
 
+/* footer */
+.footer {
+    border-top: 2px solid var(--light-text-color);
+    margin-top: 50px;
+    padding: 80px 253px;
+    margin-top: 150px;
+  }
+  
+  .footer-container {
+    max-width: 1200px;
+    margin: 0 auto;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    gap: 20px;
+  }
+  
+  .footer-section {
+    display: flex;
+    flex-direction: column;
+    gap: 25px;
+  }
+  
+  .footer-section h2 {
+    color: var(--light-text-color);
+    margin-bottom: 10px;
+  }
+
+  .footer-section p{
+    width: 213px;
+    font-size: 14px;
+    color: var(--light-text-color);
+  }
+  
+  .footer-section ul {
+    list-style: none;
+  }
+  
+  .footer-section ul li {
+    margin-bottom: 8px;
+  }
+  
+  .footer-section ul li a {
+    text-decoration: none;
+    color: var(--light-text-color);
+  }
+  
+  .social-icons {
+    display: flex;
+    gap: 10px;
+    margin-top: 10px;
+  }
+
+/* fim footer */
+
+.copy{
+    display: flex;
+    width: 100%;
+    height: 40px;
+    justify-content: center;
+    text-align: center;
+    align-items: center;
+    background-color: var(--light-gray-1);
+    color: var(--second-text-color);
+}
